Adds Jenkins task

--- a/config.json
+++ b/config.json
@@ -3,7 +3,8 @@
     "name": "GoBot",
     "tcp_port": "3333",
     "http_port": "8080",
-    "websocket_port": "12345"
+    "websocket_port": "12345",
+    "jenkinsURL": "http://localhost:6060"
   },
   "permissions": {
     "Simpsons quotes": ["member"],
